--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.3.13
   http: ^0.13.4
   flutter_dotenv: ^5.0.2
+  tmdb_api: ^2.1.0
 
 dev_dependencies:
   flutter_test:
