--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.4
   flutter_dotenv: ^5.0.2
   tmdb_api: ^2.1.0
+  cloud_firestore: ^3.1.11
 
 dev_dependencies:
   flutter_test:
