--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_dotenv: ^5.0.2
   tmdb_api: ^2.1.0
   cloud_firestore: ^3.1.11
+  provider: ^6.0.2
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
