--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^3.1.11
   provider: ^6.0.2
   shared_preferences: ^2.0.13
+  flutter_hooks: ^0.18.3
 
 dev_dependencies:
   flutter_test:
