--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,15 @@ dependencies:
   provider: ^6.0.2
   shared_preferences: ^2.0.13
   flutter_hooks: ^0.18.3
+  flutter_native_splash: ^2.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_native_splash:
+  color: '#04A9F4'
+  image: assets/popcorn_logo.png
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
