--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.0.13
   flutter_hooks: ^0.18.3
   flutter_native_splash: ^2.1.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
